--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,20 @@
-<ul class="dropdown-menu show">
-  <li><a class="dropdown-item">Action 1</a></li>
-  <li class="dropstart dropdown-submenu" sqPopper [target]="submenu11">
-    <a class="dropdown-item">Action 2</a>
-    <ul class="dropdown-menu" #submenu11>
-      <li><a class="dropdown-item">Action 2.1</a></li>
-      <li class="dropstart dropdown-submenu" sqPopper [target]="submenu22">
-        <a class="dropdown-item">Action 2.2</a>
-        <ul class="dropdown-menu" #submenu22>
-          <li><a class="dropdown-item">Action 2.1.1</a></li>
-          <li><a class="dropdown-item">Action 2.2.2</a></li>
-        </ul>
-      </li>
-    </ul>
-  </li>
-  <li><a class="dropdown-item">Action 3</a></li>
-</ul>
+<main>
+  <ul class="dropdown-menu show">
+    <li><a class="dropdown-item">Action 1</a></li>
+    <li class="dropstart dropdown-submenu" [sqPopper] [target]="submenu11">
+      <a class="dropdown-item">Action 2 <span>></span></a>
+      <ul class="dropdown-menu" #submenu11>
+        <li><a class="dropdown-item">Action 2.1</a></li>
+        <li class="dropstart dropdown-submenu" [sqPopper] [target]="submenu22">
+          <a class="dropdown-item">Action 2.2 <span>></span></a>
+          <ul class="dropdown-menu" #submenu22>
+            <li><a class="dropdown-item">Action 2.1.1</a></li>
+            <li><a class="dropdown-item">Action 2.2.2</a></li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li><a class="dropdown-item">Action 3</a></li>
+  </ul>
+  <main></main>
+</main>
